[package]
name = "redleaf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# Template engine
askama = "0.14.0"
askama_axum = "0.4"

# Authentication
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
argon2 = { version = "0.5.3", features = ["std"] }
password-hash = { version = "0.5.0" }
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand = "0.9"
getrandom = "0.3.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown
pulldown-cmark = "0.13.0"

# Error handling
anyhow = "1"
thiserror = "2.0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
